<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inspire_retarget</name>
  <version>1.0.0</version>
  <description>A ROS2 package for controlling Inspire robotic hands through motion retargeting.</description>
  <maintainer email="contact@cyberorigin.ai">cyberorigin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>boost</depend>
  <depend>fmt</depend>

  <!-- System dependencies -->
  <depend>libboost-program-options-dev</depend>
  <depend>libboost-system-dev</depend>
  <depend>libboost-thread-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
